# MedNERDS

./: .gitignore  LICENSE  README.md  app.py  db.py  prueba_modelo.ipynb  pyproject.toml
bio/: ner_prediction.py  prueba_modelo.py
notebook/: prueba_modelo.ipynb
