[project]
name = "mednerds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "en-core-web-sm",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "negspacy>=1.1.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "spacy>=3.8.13",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.6.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz" }

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
